--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8080
 MONGODB_URI=mongodb+srv://quizuser:750NWNPcZd6PdZ2O@quizdb.fve97er.mongodb.net/?retryWrites=true&w=majority&appName=Quizdb
-ALLOWED_ORIGINS=https://thebeastmaak.github.io,https://thebeastmaak.github.io/cv-data-form
+ALLOWED_ORIGINS=https://soufianemaakouk.github.io,https://soufianemaakouk.github.io/cv-data-form
